finalized the lecture notes

--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -165,20 +165,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "05287b35-268d-411d-85a8-5e1f5c67e650",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Disease: Hypertension & Hypoxia\n",
+      "Disease: Normal\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time to implement the program described above\n",
+    "def determine_disease(heart_rate, sys_bp, dia_bp, sat_o2):\n",
+    "    # Check conditions based on the chart\n",
+    "    if heart_rate > 100 and sys_bp > 140 and dia_bp > 90 and sat_o2 < 95:\n",
+    "        return \"Disease: Hypertension & Hypoxia\"\n",
+    "    elif heart_rate < 60 and sys_bp < 90 and dia_bp < 60 and sat_o2 > 95:\n",
+    "        return \"Disease: Hypotension\"\n",
+    "    elif 60 <= heart_rate <= 100 and 90 <= sys_bp <= 120 and 60 <= dia_bp <= 80 and 95 <= sat_o2 <= 100:\n",
+    "        return \"Disease: Normal\"\n",
+    "    elif heart_rate > 100 and 90 <= sys_bp <= 120 and 60 <= dia_bp <= 80 and sat_o2 < 90:\n",
+    "        return \"Disease: Tachycardia & Hypoxia\"\n",
+    "    else:\n",
+    "        return \"No matching disease found\"\n",
     "\n",
+    "# Example usage\n",
+    "# Input 1\n",
+    "heart_rate = 105\n",
+    "sys_bp = 150\n",
+    "dia_bp = 95\n",
+    "sat_o2 = 92\n",
+    "print(determine_disease(heart_rate, sys_bp, dia_bp, sat_o2))\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Input 2\n",
+    "heart_rate = 75\n",
+    "sys_bp = 110\n",
+    "dia_bp = 70\n",
+    "sat_o2 = 97\n",
+    "print(determine_disease(heart_rate, sys_bp, dia_bp, sat_o2))"
    ]
   },
   {
@@ -231,21 +259,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "07f1ad30-8163-4cef-9189-04c3d405c507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Risk Level: High Risk\n",
+      "Risk Level: Low Risk\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time to implement the program described above\n",
     "\n",
+    "def assess_diabetes_risk(fasting_glucose, family_history):\n",
+    "    # Check conditions based on the risk assessment table\n",
+    "    if fasting_glucose < 100 and not family_history:\n",
+    "        return \"Risk Level: Low Risk\"\n",
+    "    elif 100 <= fasting_glucose <= 125 and family_history:\n",
+    "        return \"Risk Level: Moderate Risk\"\n",
+    "    elif fasting_glucose >= 126:\n",
+    "        return \"Risk Level: High Risk\"\n",
+    "    else:\n",
+    "        return \"Risk Level: Low Risk\"\n",
     "\n",
+    "# Example usage\n",
+    "# Input 1\n",
+    "fasting_glucose = 130\n",
+    "family_history = True\n",
+    "print(assess_diabetes_risk(fasting_glucose, family_history))  # Output: High Risk\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Input 2\n",
+    "fasting_glucose = 90\n",
+    "family_history = False\n",
+    "print(assess_diabetes_risk(fasting_glucose, family_history))  # Output: Low Risk"
    ]
   },
   {
@@ -493,21 +543,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "61d95529-6930-4a1e-8167-c909897903e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PRIME\n",
+      "NOT A PRIME\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time to implement the program described above\n",
+    "def is_prime(number):\n",
+    "    # Check if the number is greater than 1\n",
+    "    if number <= 1:\n",
+    "        return \"NOT A PRIME\"\n",
+    "    # Check for divisors other than 1 and itself\n",
+    "    for i in range(2, int(number**0.5) + 1):\n",
+    "        if number % i == 0:\n",
+    "            return \"NOT A PRIME\"\n",
+    "    return \"PRIME\"\n",
     "\n",
+    "# Example usage for a single number\n",
+    "number = 7\n",
+    "print(is_prime(number))  # Output: PRIME\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "number = 10\n",
+    "print(is_prime(number))  # Output: NOT A PRIME"
    ]
   },
   {
@@ -571,21 +637,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5bca6822-7342-491f-975b-339f1f8f8742",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dominant Allele: G - 37.50%\n",
+      "A: 31.25%\n",
+      "T: 18.75%\n",
+      "G: 37.50%\n",
+      "C: 12.50%\n",
+      "Sequence 1: Dominant Allele: G - 50.00%\n",
+      "Sequence 2: Dominant Allele: A - 50.00%\n",
+      "Sequence 3: Dominant Allele: G - 50.00%\n",
+      "Sequence 4: Dominant Allele: T - 25.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time to implement the program described above\n",
     "\n",
+    "import numpy as np\n",
     "\n",
+    "def calculate_allele_frequency(sequences):\n",
+    "    # Initialize a dictionary to count nucleotides\n",
+    "    nucleotide_counts = {}\n",
     "\n",
+    "    # Count occurrences of each nucleotide across all sequences\n",
+    "    for row in sequences:\n",
+    "        for base in row:\n",
+    "            if base in nucleotide_counts:\n",
+    "                nucleotide_counts[base] += 1\n",
+    "            else:\n",
+    "                nucleotide_counts[base] = 1\n",
     "\n",
+    "    # Total number of nucleotides\n",
+    "    total_bases = sum(nucleotide_counts.values())\n",
     "\n",
+    "    # Calculate the frequency of each nucleotide\n",
+    "    frequencies = {nucleotide: (count / total_bases) * 100 for nucleotide, count in nucleotide_counts.items()}\n",
     "\n",
+    "    # Find the dominant allele using NumPy\n",
+    "    dominant_allele = max(frequencies, key=frequencies.get)\n",
+    "    dominant_frequency = frequencies[dominant_allele]\n",
     "\n",
-    "\n"
+    "    # Print results\n",
+    "    print(f\"Dominant Allele: {dominant_allele} - {dominant_frequency:.2f}%\")\n",
+    "    for nucleotide, frequency in frequencies.items():\n",
+    "        print(f\"{nucleotide}: {frequency:.2f}%\")\n",
+    "\n",
+    "# Example Input\n",
+    "sequences = [\n",
+    "    [\"A\", \"T\", \"G\", \"G\"],\n",
+    "    [\"A\", \"A\", \"T\", \"G\"],\n",
+    "    [\"C\", \"A\", \"G\", \"G\"],\n",
+    "    [\"T\", \"A\", \"C\", \"G\"]\n",
+    "]\n",
+    "\n",
+    "calculate_allele_frequency(sequences)\n",
+    "\n",
+    "# Challenge: Handle sequences of different lengths and print per sequence\n",
+    "def calculate_dominant_per_sequence(sequences):\n",
+    "    for index, row in enumerate(sequences):\n",
+    "        # Count nucleotides in the row\n",
+    "        nucleotide_counts = {}\n",
+    "        for base in row:\n",
+    "            nucleotide_counts[base] = nucleotide_counts.get(base, 0) + 1\n",
+    "\n",
+    "        # Total nucleotides in the row\n",
+    "        total_bases = sum(nucleotide_counts.values())\n",
+    "\n",
+    "        # Calculate frequencies\n",
+    "        frequencies = {nucleotide: (count / total_bases) * 100 for nucleotide, count in nucleotide_counts.items()}\n",
+    "\n",
+    "        # Find the dominant allele\n",
+    "        dominant_allele = max(frequencies, key=frequencies.get)\n",
+    "        dominant_frequency = frequencies[dominant_allele]\n",
+    "\n",
+    "        # Print results for the row\n",
+    "        print(f\"Sequence {index + 1}: Dominant Allele: {dominant_allele} - {dominant_frequency:.2f}%\")\n",
+    "\n",
+    "calculate_dominant_per_sequence(sequences)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd590426-a349-4381-834a-ce46dfaeb6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
