--- a/lectures/lecture3.ipynb
+++ b/lectures/lecture3.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "4c696dda-d617-40de-87b5-36af9c23f05e",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e58920a6-2aab-4dfe-b1bd-8e6b52996a37",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "7593d9e8-9477-45fc-a928-ccc43862c3c2",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "ce5ebbde-884d-417e-bef3-02f83f498610",
    "metadata": {},
    "outputs": [
@@ -246,17 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "917ff3ba-28b7-4655-9374-34147cd76c9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gc_content_ecoli = gc_content_window(ecoli_genome[:20000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "188f5feb-395b-433b-82c3-b1b6b2d72a3d",
    "metadata": {},
    "outputs": [],
@@ -275,17 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "id": "917ff3ba-28b7-4655-9374-34147cd76c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc_content_ecoli = gc_content_window(ecoli_genome[:20000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "f3fb6f69-be89-407f-b05e-8dd6559923e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10fcbea70>]"
+       "[<matplotlib.lines.Line2D at 0x17f74d480>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -377,19 +377,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5a55582e-d57c-4aac-932a-5b635155fec4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TGCGCGTA\n",
+      "TACGCGCA\n",
+      "ACGCGCAT\n",
+      "62.5\n",
+      "AUGCGCGU\n",
+      "UGCGCGUA\n",
+      "UACGCGCA\n",
+      "ACGCGCAU\n",
+      "62.5\n",
+      "MR\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time working on this example \n",
+    "class Sequence:\n",
+    "    def __init__(self, sequence, is_rna=False):\n",
+    "        self.sequence = sequence.upper()\n",
+    "        self.is_rna = is_rna\n",
+    "        self.validate_sequence()\n",
     "\n",
+    "    def validate_sequence(self):\n",
+    "        valid_nucleotides = \"AUCG\" if self.is_rna else \"ATCG\"\n",
+    "        for nucleotide in self.sequence:\n",
+    "            if nucleotide not in valid_nucleotides:\n",
+    "                raise ValueError(f\"Invalid nucleotide {nucleotide} for {'RNA' if self.is_rna else 'DNA'} sequence.\")\n",
     "\n",
+    "    def reverse(self):\n",
+    "        return self.sequence[::-1]\n",
     "\n",
+    "    def complement(self):\n",
+    "        complement_map = {\n",
+    "            \"A\": \"U\" if self.is_rna else \"T\",\n",
+    "            \"U\": \"A\" if self.is_rna else None,\n",
+    "            \"T\": \"A\",\n",
+    "            \"C\": \"G\",\n",
+    "            \"G\": \"C\"\n",
+    "        }\n",
+    "        return \"\".join(complement_map[nuc] for nuc in self.sequence)\n",
     "\n",
+    "    def reverse_complement(self):\n",
+    "        return self.complement()[::-1]\n",
     "\n",
-    "\n"
+    "    def gc_content(self):\n",
+    "        gc_count = self.sequence.count(\"G\") + self.sequence.count(\"C\")\n",
+    "        return (gc_count / len(self.sequence)) * 100\n",
+    "\n",
+    "    def transcribe(self):\n",
+    "        if self.is_rna:\n",
+    "            raise ValueError(\"Transcription is not applicable for RNA sequences.\")\n",
+    "        return self.sequence.replace(\"T\", \"U\")\n",
+    "\n",
+    "    def translate(self):\n",
+    "        if not self.is_rna:\n",
+    "            raise ValueError(\"Translation requires an RNA sequence.\")\n",
+    "        codon_table = {\n",
+    "            \"AUG\": \"M\", \"UUU\": \"F\", \"UUC\": \"F\", \"UUA\": \"L\", \"UUG\": \"L\",\n",
+    "            \"UCU\": \"S\", \"UCC\": \"S\", \"UCA\": \"S\", \"UCG\": \"S\",\n",
+    "            \"UAU\": \"Y\", \"UAC\": \"Y\", \"UAA\": \"Stop\", \"UAG\": \"Stop\",\n",
+    "            \"UGU\": \"C\", \"UGC\": \"C\", \"UGA\": \"Stop\", \"UGG\": \"W\",\n",
+    "            \"CUU\": \"L\", \"CUC\": \"L\", \"CUA\": \"L\", \"CUG\": \"L\",\n",
+    "            \"CCU\": \"P\", \"CCC\": \"P\", \"CCA\": \"P\", \"CCG\": \"P\",\n",
+    "            \"CAU\": \"H\", \"CAC\": \"H\", \"CAA\": \"Q\", \"CAG\": \"Q\",\n",
+    "            \"CGU\": \"R\", \"CGC\": \"R\", \"CGA\": \"R\", \"CGG\": \"R\",\n",
+    "            \"AUU\": \"I\", \"AUC\": \"I\", \"AUA\": \"I\", \"AUG\": \"M\",\n",
+    "            \"ACU\": \"T\", \"ACC\": \"T\", \"ACA\": \"T\", \"ACG\": \"T\",\n",
+    "            \"AAU\": \"N\", \"AAC\": \"N\", \"AAA\": \"K\", \"AAG\": \"K\",\n",
+    "            \"AGU\": \"S\", \"AGC\": \"S\", \"AGA\": \"R\", \"AGG\": \"R\",\n",
+    "            \"GUU\": \"V\", \"GUC\": \"V\", \"GUA\": \"V\", \"GUG\": \"V\",\n",
+    "            \"GCU\": \"A\", \"GCC\": \"A\", \"GCA\": \"A\", \"GCG\": \"A\",\n",
+    "            \"GAU\": \"D\", \"GAC\": \"D\", \"GAA\": \"E\", \"GAG\": \"E\",\n",
+    "            \"GGU\": \"G\", \"GGC\": \"G\", \"GGA\": \"G\", \"GGG\": \"G\"\n",
+    "        }\n",
+    "        protein = []\n",
+    "        for i in range(0, len(self.sequence) - 2, 3):\n",
+    "            codon = self.sequence[i:i+3]\n",
+    "            if codon_table.get(codon) == \"Stop\":\n",
+    "                break\n",
+    "            protein.append(codon_table.get(codon, \"?\"))\n",
+    "        return \"\".join(protein)\n",
+    "\n",
+    "# Example usage\n",
+    "# DNA Sequence\n",
+    "dna_seq = Sequence(\"ATGCGCGT\", is_rna=False)\n",
+    "print(dna_seq.reverse())             # Output: TGCGCGTA\n",
+    "print(dna_seq.complement())          # Output: TACGCGCA\n",
+    "print(dna_seq.reverse_complement())  # Output: ACGCGCAT\n",
+    "print(dna_seq.gc_content())          # Output: 75.0\n",
+    "print(dna_seq.transcribe())          # Output: AUGCGCGU\n",
+    "\n",
+    "# RNA Sequence\n",
+    "rna_seq = Sequence(\"AUGCGCGU\", is_rna=True)\n",
+    "print(rna_seq.reverse())             # Output: UGCGCGUA\n",
+    "print(rna_seq.complement())          # Output: UACGCGCA\n",
+    "print(rna_seq.reverse_complement())  # Output: ACGCGCAU\n",
+    "print(rna_seq.gc_content())          # Output: 75.0\n",
+    "print(rna_seq.translate())           # Output: MR"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e24b5b-db24-433e-9ef8-96f261648dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
