--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "88b74b7e-cc93-42ee-858b-eee6b06918fb",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "391867f9-e8ae-492d-8d96-e49ce315a5aa",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "3d1eff5e-e75d-45cd-9c4a-2f8c64e3b693",
    "metadata": {},
    "outputs": [
@@ -444,19 +444,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5a55582e-d57c-4aac-932a-5b635155fec4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TGCGCGTA\n",
+      "TACGCGCA\n",
+      "ACGCGCAT\n",
+      "62.5\n",
+      "AUGCGCGU\n",
+      "UGCGCGUA\n",
+      "UACGCGCA\n",
+      "ACGCGCAU\n",
+      "62.5\n",
+      "MR\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time working on this example \n",
+    "# Let's spend some time working on this example \n",
+    "class Sequence:\n",
+    "    def __init__(self, sequence, is_rna=False):\n",
+    "        self.sequence = sequence.upper()\n",
+    "        self.is_rna = is_rna\n",
+    "        self.validate_sequence()\n",
     "\n",
+    "    def validate_sequence(self):\n",
+    "        valid_nucleotides = \"AUCG\" if self.is_rna else \"ATCG\"\n",
+    "        for nucleotide in self.sequence:\n",
+    "            if nucleotide not in valid_nucleotides:\n",
+    "                raise ValueError(f\"Invalid nucleotide {nucleotide} for {'RNA' if self.is_rna else 'DNA'} sequence.\")\n",
     "\n",
+    "    def reverse(self):\n",
+    "        return self.sequence[::-1]\n",
     "\n",
+    "    def complement(self):\n",
+    "        complement_map = {\n",
+    "            \"A\": \"U\" if self.is_rna else \"T\",\n",
+    "            \"U\": \"A\" if self.is_rna else None,\n",
+    "            \"T\": \"A\",\n",
+    "            \"C\": \"G\",\n",
+    "            \"G\": \"C\"\n",
+    "        }\n",
+    "        return \"\".join(complement_map[nuc] for nuc in self.sequence)\n",
     "\n",
+    "    def reverse_complement(self):\n",
+    "        return self.complement()[::-1]\n",
     "\n",
-    "\n"
+    "    def gc_content(self):\n",
+    "        gc_count = self.sequence.count(\"G\") + self.sequence.count(\"C\")\n",
+    "        return (gc_count / len(self.sequence)) * 100\n",
+    "\n",
+    "    def transcribe(self):\n",
+    "        if self.is_rna:\n",
+    "            raise ValueError(\"Transcription is not applicable for RNA sequences.\")\n",
+    "        return self.sequence.replace(\"T\", \"U\")\n",
+    "\n",
+    "    def translate(self):\n",
+    "        if not self.is_rna:\n",
+    "            raise ValueError(\"Translation requires an RNA sequence.\")\n",
+    "        codon_table = {\n",
+    "            \"AUG\": \"M\", \"UUU\": \"F\", \"UUC\": \"F\", \"UUA\": \"L\", \"UUG\": \"L\",\n",
+    "            \"UCU\": \"S\", \"UCC\": \"S\", \"UCA\": \"S\", \"UCG\": \"S\",\n",
+    "            \"UAU\": \"Y\", \"UAC\": \"Y\", \"UAA\": \"Stop\", \"UAG\": \"Stop\",\n",
+    "            \"UGU\": \"C\", \"UGC\": \"C\", \"UGA\": \"Stop\", \"UGG\": \"W\",\n",
+    "            \"CUU\": \"L\", \"CUC\": \"L\", \"CUA\": \"L\", \"CUG\": \"L\",\n",
+    "            \"CCU\": \"P\", \"CCC\": \"P\", \"CCA\": \"P\", \"CCG\": \"P\",\n",
+    "            \"CAU\": \"H\", \"CAC\": \"H\", \"CAA\": \"Q\", \"CAG\": \"Q\",\n",
+    "            \"CGU\": \"R\", \"CGC\": \"R\", \"CGA\": \"R\", \"CGG\": \"R\",\n",
+    "            \"AUU\": \"I\", \"AUC\": \"I\", \"AUA\": \"I\", \"AUG\": \"M\",\n",
+    "            \"ACU\": \"T\", \"ACC\": \"T\", \"ACA\": \"T\", \"ACG\": \"T\",\n",
+    "            \"AAU\": \"N\", \"AAC\": \"N\", \"AAA\": \"K\", \"AAG\": \"K\",\n",
+    "            \"AGU\": \"S\", \"AGC\": \"S\", \"AGA\": \"R\", \"AGG\": \"R\",\n",
+    "            \"GUU\": \"V\", \"GUC\": \"V\", \"GUA\": \"V\", \"GUG\": \"V\",\n",
+    "            \"GCU\": \"A\", \"GCC\": \"A\", \"GCA\": \"A\", \"GCG\": \"A\",\n",
+    "            \"GAU\": \"D\", \"GAC\": \"D\", \"GAA\": \"E\", \"GAG\": \"E\",\n",
+    "            \"GGU\": \"G\", \"GGC\": \"G\", \"GGA\": \"G\", \"GGG\": \"G\"\n",
+    "        }\n",
+    "        protein = []\n",
+    "        for i in range(0, len(self.sequence) - 2, 3):\n",
+    "            codon = self.sequence[i:i+3]\n",
+    "            if codon_table.get(codon) == \"Stop\":\n",
+    "                break\n",
+    "            protein.append(codon_table.get(codon, \"?\"))\n",
+    "        return \"\".join(protein)\n",
+    "\n",
+    "# Example usage\n",
+    "# DNA Sequence\n",
+    "dna_seq = Sequence(\"ATGCGCGT\", is_rna=False)\n",
+    "print(dna_seq.reverse())             # Output: TGCGCGTA\n",
+    "print(dna_seq.complement())          # Output: TACGCGCA\n",
+    "print(dna_seq.reverse_complement())  # Output: ACGCGCAT\n",
+    "print(dna_seq.gc_content())          # Output: 75.0\n",
+    "print(dna_seq.transcribe())          # Output: AUGCGCGU\n",
+    "\n",
+    "# RNA Sequence\n",
+    "rna_seq = Sequence(\"AUGCGCGU\", is_rna=True)\n",
+    "print(rna_seq.reverse())             # Output: UGCGCGUA\n",
+    "print(rna_seq.complement())          # Output: UACGCGCA\n",
+    "print(rna_seq.reverse_complement())  # Output: ACGCGCAU\n",
+    "print(rna_seq.gc_content())          # Output: 75.0\n",
+    "print(rna_seq.translate())           # Output: MR"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbfa0fc-37a7-4a77-a0f7-c9d120f4c20a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
