--- a/lectures/lecture6.ipynb
+++ b/lectures/lecture6.ipynb
@@ -5,7 +5,7 @@
    "id": "cf6b8f9b-7612-4067-9a45-2169944a70be",
    "metadata": {},
    "source": [
-    "# Introduction to Pandas\n",
+    "# Lecture 6 - Introduction to Pandas\n",
     "\n",
     "## What is Pandas?\n",
     "\n",
